sticky를 활용한 배치

--- a/css/example-12.css
+++ b/css/example-12.css
@@ -18,7 +18,6 @@ img {
 }
 /* 숨김 콘텐츠 */
 .readable-hidden {
-  background: pink;
   position: absolute;
   width: 1px;
   height: 1px;
@@ -27,7 +26,43 @@ img {
   clip: rect(0, 0, 0, 0);
 }
 body {
-  font-size: 20px;
+  /* font-size: 15px; */
+  background:url("../images/road.png") no-repeat 0 0 /cover fixed;
+}
+/* Header 공통 */
+.header{
+  background-color: #fff;
+  z-index: 10;
+
+}
+/* ad section 공통 */
+.ad{
+  color: #fff;
+  font-size: 3em;
+  position: relative;
+  /* display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-bottom: 1em; */
+
+}
+.ad-content{
+  background-color: slateblue;
+  position: sticky;
+  top: 100px;
+  text-align: right;
+  z-index: inherit;
+
+}
+/* Main 공통 */
+.main{
+  background: #fff;
+
+}
+/* footer 공통 */
+.footer{
+  background: #181818;
+  color: #fff;
 }
 /* Mobile 디바이스 */
 @media screen and (max-width: 999px) {
@@ -38,13 +73,11 @@ body {
   }
   /* 모바일 메뉴 */
   .menu {
-    background: yellow;
     display: flex;
     justify-content: space-around;
   }
   .menu a {
     display: block;
-    background: pink;
     padding: 1em 1em;
     text-transform: uppercase;
   }
@@ -55,25 +88,22 @@ body {
   .header {
     display: grid;
     grid-template-areas: "logo menu";
-    background: lime;
     align-items: center;
     padding: 1em 2em;
-    position: fixed;
-    /* width: 100%;
+    position: sticky;
+    width: 100%;
     top: 0;
-    left: 0; */
+    left: 0;
   }
   /* 데스크탑 로고 */
   .logo{
     grid-area: logo;
     width: 20%;
-    background: yellow;
   }
   /* 데스크탑 메뉴 */
   .menu{
     grid-area: menu;
     display: flex;
-    background: pink;
   }
   .menu a{
       display: block;
@@ -87,15 +117,12 @@ body {
       content:"";
   }
   .ad{
-      background:orangered;
       height: 50vh;
   }
   .main{
-      background: silver;
       height: 50vh;
   }
   .footer{
-      background:olivedrab;
       height: 50vh;
   }
 }
