--- a/css/example-12.css
+++ b/css/example-12.css
@@ -79,28 +79,49 @@ body {
     right: 1em;
     width: 40px;
     height: 40px;
+    overflow: hidden;
   }
   .btn-menubar{
-    display: none;
+    border: 0;
+    background: transparent;
+    padding: 0;
+    color: rgba(0,0,0,0);
+    cursor: pointer;
   }
   .menubar{
     /* display: block; */
+    cursor: pointer;
     position: absolute;
     background:#181818;
     border-radius: 10px;
     width: 100%;
     height: 25%;
     left: 0;
+    transition: all 100ms;
   }
   .menubar-top{
     top:0;
+  }
+  .menubar-act.menubar-top{
+    transform: translateY(-50%) rotate(45deg) ;
+    /* transform: rotate(45deg) translateY(-50%); */
+    top: 50%;
   }
   .menubar-middle{
     top: 50%;
     transform: translateY(-50%);
   }
+  .menubar-act.menubar-middle{
+    top: 50%;
+    transform: translate(100%, -50%);
+
+  }
   .menubar-bottom{
     bottom:0;
+  }
+  .menubar-act.menubar-bottom{
+    transform: translateY(-50%) rotate(-45deg) ;
+    top: 50%;
   }
   .menu{
     background: rgba(0,0,0,.85);
@@ -113,10 +134,16 @@ body {
     color: powderblue;
     padding: 3em 0 0 2em;
     transform: translateX(-100%);
-
+    /* transition-duration: 0.1s; */
+    transition: all 100ms;
   }
   .menu-act{
     transform: translateX(0);
+    /* transition-duration: 0.5s; */
+  }
+  .main .box{
+      min-height: 100px;
+      margin: 1em;
   }
 }
 
@@ -128,6 +155,9 @@ body {
     margin: auto;
   }
   /* 모바일 메뉴 */
+  .btn-wrapper{
+    display: none;
+  }
   .menu {
     display: flex;
     justify-content: space-around;
@@ -136,6 +166,23 @@ body {
     display: block;
     padding: 1em 1em;
     text-transform: uppercase;
+  }
+  /* 모바일 main */
+  .main{
+      /* background: orangered; */
+      overflow: hidden;
+  }
+  .box{
+      /* background: lime; */
+      float: left;
+      width: 45%;
+      height: 150px;
+      margin: 1em 2.5%;
+  }
+  .box1{
+      /* background: skyblue; */
+
+
   }
 }
 /* Desktop 디바이스 */
@@ -157,6 +204,9 @@ body {
     width: 20%;
   }
   /* 데스크탑 메뉴 */
+  .btn-wrapper{
+    display: none;
+  }
   .menu{
     grid-area: menu;
     display: flex;
@@ -172,9 +222,22 @@ body {
   .menu li:first-child a::before{
       content:"";
   }
+  /* 데스크탑 main */
   .main{
-      height: 50vh;
+      /* background: yellow; */
+      display: grid;
+      grid-template-areas: "box box box box";
+      grid-auto-columns: 20%;
+      grid-auto-rows: 150px;
+      justify-content: space-between;
+      grid-row-gap: 20px;
+      padding: 2em;
+
   }
+  .main .box{
+      background:pink;
+  }
+  /* 데스크탑 footer */
   .footer{
       height: 50vh;
   }
